--- a/consumerapp/src/main/res/layout/list_item.xml
+++ b/consumerapp/src/main/res/layout/list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
-                android:layout_height="130dp" >
+                android:layout_height="wrap_content" >
     <ImageView
         android:id="@+id/restaurant_img"
         android:layout_width="160dp"
@@ -41,5 +41,15 @@
         android:paddingTop="10dp"
         android:paddingLeft="10dp"
         android:textSize="14dp" />
+
+    <CheckBox
+        android:id="@+id/favorited"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:layout_below="@+id/status"
+        android:layout_alignLeft="@+id/status"
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"/>
+
 
 </RelativeLayout>
